Fix lingering process